Recents and jump. Fixed: add icon on empty list for unauthed users

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -66,6 +66,10 @@ input {
   &:focus {
     border-bottom-color: $primary;
   }
+
+  &::placeholder {
+    color: rgba(0,0,0,.38);
+  }
 }
 
 .input-hint {
